<resources>
    <string name="app_name">App5</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="signup">SignUp</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="show">show</string>
</resources>